# FairZK

./: Cargo.toml  README.md
algebra/: Cargo.toml
algebra/benches/: sample.rs
algebra/examples/: field.rs
algebra/src/: lib.rs  primitive.rs  random.rs
algebra/src/baby_bear/: extension.rs  mod.rs
algebra/src/extension/: binomial_extension.rs  helper.rs  mod.rs  packed.rs
algebra/tests/: derive_test.rs  extension_test.rs  multivariate_test.rs
fairzk/: Cargo.toml
fairzk/examples/: infairence.rs  inference.rs  lookup.rs  meta_disparity.rs  spectral_norm.rs  total.rs  vector_lookup.rs
fairzk/src/: lib.rs  pcs.rs  read_params.rs  utils.rs
fairzk/src/piop/: bound.rs  infairence.rs  inference.rs  l2_norm.rs  lookup.rs  meta_disparity.rs  mod.rs  spectral_norm.rs  total.rs  vector_lookup.rs
fairzk/src/snark/: bound_snark.rs  infairence_snark.rs  inference_snark.rs  l2_norm_snark.rs  lookup_snark.rs  meta_disparity_snark.rs  mod.rs  spectral_norm_snark.rs  total_snark.rs  vector_lookup_snark.rs
fairzk/src/sumcheck/: mod.rs  prover.rs  verifier.rs
fairzk/tests/: test_sumcheck.rs
models/quantized/: adult_data_oath.txt  adult_layer0_W.txt  adult_layer1_W.txt  adult_layer2_W.txt  adult_lr_w1.txt  adult_sensitive_label.txt  compas_data.txt  compas_data_oath.txt  compas_layer0_W.txt  compas_layer1_W.txt  compas_lr_w1.txt  compas_sensitive_label.txt  german_data.txt  german_data_oath.txt  german_layer0_W.txt  german_layer1_W.txt  german_lr_w1.txt  german_sensitive_label.txt
pcs/: Cargo.toml
pcs/benches/: brakedown_pcs.rs
pcs/examples/: brakedown_pcs.rs  brakedown_profile.rs
pcs/src/: lib.rs
pcs/tests/: test_code.rs  test_pcs.rs
(+58 files in other folders)
