[package]
name = "fairzk"
version = "0.1.0"
edition = "2021"


[dependencies]
eigenvalues = "0.4.0"
algebra = { path = "../algebra" }
pcs = { path = "../pcs" }
nalgebra = "0.32"

thiserror = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
bincode = { workspace = true }
csv = "1.3"

[target.'cfg(all(unix, any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(all(target_os = "windows", target_arch = "x86_64", target_env = "gnu"))'.dependencies]
sha2 = { workspace = true, features = ["asm"] }

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies]
sha2 = { workspace = true }

[dev-dependencies]
criterion = "0.3"
